# ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  tools.yaml
floor_assistance_agent/: agent.py
searcher-agent/: __init__.py  agent.py
tools/: __init__.py  check_our_store_inventory.py  check_product_availability.py  get_brands_and_products.py  get_our_store_info.py  get_product_categories.py  list_store_ids.py  search_products.py
